processed/gerrit/txt/43712.txt
Change:     43712
Subject:    LU-14093 llapi: remove ignored qualifier
Link:       https://review.whamcloud.com/c/fs/lustre-release/+/43712
Change-Id:  I049166bbc586007cdecc93225d508693607ef04e
Project:    fs/lustre-release
Branch:     master
Status:     MERGED
Owner:      Dominique Martinet
Created:    2021-05-15 22:38:28.000000000
Updated:    2021-06-14 16:43:59.000000000
Patch Set:  3
Insertions: +2
Deletions:  -2
Comments:   1 (0 unresolved)

--- Labels ---
  Code-Review: James Simmons: +1; Andreas Dilger: +1; Neil Brown: +1; Oleg Drokin: +2
  Verified: jenkins: +1; Maloo: +1

--- Reviewers ---
  REVIEWER: Oleg Drokin, Andreas Dilger, James Simmons, Neil Brown

--- Commit Message ---
LU-14093 llapi: remove ignored qualifier

Fixes the following warning on newer gcc with -Wextra:
.../include/lustre/lustreapi.h:1000:1: error: type qualifiers ignored on function return type [-Werror=ignored-qualifiers]
 1000 | const __u16 llapi_layout_string_flags(char *string);
      | ^~~~~

As the parameter is ignored, this should make no code difference

Test-parameters: trivial

Change-Id: I049166bbc586007cdecc93225d508693607ef04e
Signed-off-by: Dominique Martinet <asmadeus@codewreck.org>
Reviewed-on: https://review.whamcloud.com/43712
Tested-by: jenkins <devops@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Andreas Dilger <adilger@whamcloud.com>
Reviewed-by: James Simmons <jsimmons@infradead.org>
Reviewed-by: Neil Brown <neilb@suse.de>
Reviewed-by: Oleg Drokin <green@whamcloud.com>

--- Review History ---

--- Message (Dominique Martinet, 2021-05-15 22:38:28.000000000) ---
Uploaded patch set 1.

--- Message (wc-checkpatch, 2021-05-15 22:39:12.000000000) ---
Patch Set 1:

Looks good to me.

--- Message (Lustre Gerrit Janitor, 2021-05-15 22:43:54.000000000) ---
Patch Set 1:

(1 comment)

centos7: Compile failed


 Job output URL: https://testing-archive.whamcloud.com/gerrit-janitor/15892/results.html

--- Message (Dominique Martinet, 2021-05-15 22:55:59.000000000) ---
Uploaded patch set 2.

--- Message (jenkins, 2021-05-15 22:56:00.000000000) ---
Patch Set 1: Verified-1

Build Failed 

https://build.whamcloud.com/job/lustre-reviews-patchless/20749/ : ABORTED

https://build.whamcloud.com/job/lustre-reviews/80815/ : ABORTED

--- Message (wc-checkpatch, 2021-05-15 22:59:43.000000000) ---
Patch Set 2:

Looks good to me.

--- Message (jenkins, 2021-05-15 23:54:20.000000000) ---
Patch Set 2: Verified+1

Build Successful 

https://build.whamcloud.com/job/lustre-reviews-patchless/20751/ : SUCCESS

https://build.whamcloud.com/job/lustre-reviews/80817/ : SUCCESS

--- Message (Andreas Dilger, 2021-05-20 03:03:37.000000000) ---
Patch Set 2: Code-Review+1

--- Message (James Simmons, 2021-05-22 12:50:38.000000000) ---
Patch Set 2: Code-Review+1

--- Message (Neil Brown, 2021-05-24 01:14:56.000000000) ---
Patch Set 2: Code-Review+1

--- Message (Oleg Drokin, 2021-06-14 16:43:56.000000000) ---
Patch Set 2: Code-Review+2

--- Message (unknown, 2021-06-14 16:43:59.000000000) ---
Change has been successfully cherry-picked as 90ee0457c9fb1da939558186961f346c917d678f by Oleg Drokin
